Hidden collections are still rendered by Cycles in the Viewport #70670

Closed
opened 2019-10-09 11:47:02 +02:00 by Julien Kaspar · 6 comments
Member

System Information
Operating system: Linux-4.15.0-65-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.40

Blender Version
Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-09 08:54, hash: 22996f3dbe
Worked: (2.81 (sub 14), branch: master, commit date: 2019-10-08 14:26, hash: 7a1847f0e9

Short description of error
When rendering with Cycles in the viewport it takes into account which objects are hidden with the eye icon. Since today this doesn't seem to be the case anymore with hidden collections.

Exact steps for others to reproduce the error

  • Create a couple collections in an empty file with any object in each.
  • Switch to rendered view mode with Cycles as the render engine.
  • Toggle the eye icon in the outliner for the collections.
**System Information** Operating system: Linux-4.15.0-65-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.40 **Blender Version** Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-09 08:54, hash: `22996f3dbe` Worked: (2.81 (sub 14), branch: master, commit date: 2019-10-08 14:26, hash: `7a1847f0e9` **Short description of error** When rendering with Cycles in the viewport it takes into account which objects are hidden with the eye icon. Since today this doesn't seem to be the case anymore with hidden collections. **Exact steps for others to reproduce the error** - Create a couple collections in an empty file with any object in each. - Switch to rendered view mode with Cycles as the render engine. - Toggle the eye icon in the outliner for the collections.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

#70703 was marked as duplicate of this issue

#70703 was marked as duplicate of this issue
Dalai Felinto self-assigned this 2019-10-09 13:59:01 +02:00

This issue was referenced by blender/cycles@a9e2683b95

This issue was referenced by blender/cycles@a9e2683b958a6db537e15d62b2e48c1aee31808d

This issue was referenced by 280d6b03a7

This issue was referenced by 280d6b03a7a9c35d5b50fdeaf03a43f72c3a8059

Added subscribers: @afeso, @senteria

Added subscribers: @afeso, @senteria

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70670
No description provided.