Fix T70670: Hidden collections are still rendered by Cycles in the Viewport

Now local collections are fully working with cycles preview, while the
collection visibility bug is fixed.

Local collections were not working with cycles viewport even before the recent
commit to allow users to show collections that are hidden in the view layer.

It just got worse with said commit (0812949bbc3d).

Differential Revision: https://developer.blender.org/D6034